# csa-warehouse

./: .gitignore
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/endpoints/datasets/: dataset_info.py  datasets.py  manage.py
backend/app/api/endpoints/pipelines/: pipeline.py
backend/app/api/endpoints/users/: role_check.py  user_routes.py  users.py
backend/app/auth/: security.py  token_middleware.py  user_auth.py
backend/app/config/: aws_settings.py  logging.py  pipeline_mapping.py  settings.py
backend/app/dashboards/: README.md  __init__.py  analytics_dashboard.py  demo_dashboard.py  inventory_dashboard.py  kisan_mitra.py  revenue_dashboard.py  sales_dashboard.py  streamlit_integration.py  utilities.py
backend/app/dashboards/data/: Dim_Date.csv  Issue_6May2025.csv  Issue_Category_6May2025.csv  Issue_Dept_6May2025.csv
backend/app/db/: crud.py  database.py
backend/app/schemas/: models.py
backend/app/services/storage/: base_storage.py  minio_service.py  mongodb_service.py  s3_service.py  storage_factory.py
backend/app/services/tasks/: task_executor.py
backend/app/utils/: csv_processor.py  erp.py  file_utils.py
backend/cloud_functions/api/: executor.py
backend/cloud_functions/rpc_server/: custprocess.py  introspection.py
backend/scripts/: init_roles_and_access.py
frontend/: .env.example  openapi-ts.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/components/: app-sidebar.tsx  dialog.tsx  feature-card.tsx  nav-main.tsx  (+3 more)
(+53 files in other folders)
