[project]
name = "backend"
version = "0.1.0"
description = "The backend for the Agriworks platform"
package-mode = false
authors = [
    {name = "Abhigna Revuru",email = "21285441+abhignarevuru@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pymongo (>=4.13.2,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "minio",
    "pandas", 
    "pydantic-settings",
    "python-multipart",
    "csa-erp-client @ git+https://github.com/Agriworks/erpnext_client.git",
    "mangum",
    "boto3",
    "dnspython",
    "streamlit (>=1.50.0,<2.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "streamlit-shadcn-ui (>=0.1.19,<0.2.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
isort = "^5.10.1"
flake8 = "^3.8.4"
mypy = "^1.1.1"
rope = "^0.18.0"
pytest = "^7.1.2"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
sphinxcontrib-napoleon = "^0.7"
openapi-generator-cli = "^7.13.0.post0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120